--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -17,7 +17,13 @@ SRCFYPP =\
         stdlib_stats_moment_all.fypp \
         stdlib_stats_moment_mask.fypp \
         stdlib_stats_moment_scalar.fypp \
-        stdlib_stats_var.fypp	
+        stdlib_stats_var.fypp \
+	stdlib_stats_distribution_PRNG.fypp \
+	stdlib_stats_distribution_uniform.fypp \
+	stdlib_stats_distribution_normal.fypp \
+	stdlib_stats_distribution_gamma.fypp \
+	stdlib_stats_distribution_special.fypp \
+	stdlib_stats_distribution_beta.fypp
 
 SRC = f18estop.f90 \
       stdlib_ascii.f90 \
@@ -104,3 +110,32 @@ stdlib_stats_var.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
+stdlib_stats_distribution_PRNG.o: \
+	stdlib_kinds.o \
+	stdlib_error.o
+stdlib_stats_distribution_uniform.o: \
+	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_PRNG.o
+stdlib_stats_distribution_normal.o: \
+	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_PRNG.o \
+	stdlib_stats_distribution_uniform.o
+stdlib_stats_distribution_special.o: \ 
+	stdlib_kinds.o \
+	stdlib_error.o
+stdlib_stats_distribution_gamma.o: \
+	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_PRNG.o \
+	stdlib_stats_distribution_uniform.o \
+	stdlib_stats_distribution_normal.o \
+	stdlib_stats_distribution_special.o
+stdlib_stats_distribution_beta.o: \
+	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_PRNG.o \
+	stdlib_stats_distribution_uniform.o \
+	stdlib_stats_distribution_special.o \
+	stdlib_stats_distribution_gamma.o
