--- a/src/tests/stats/CMakeLists.txt
+++ b/src/tests/stats/CMakeLists.txt
@@ -6,6 +6,7 @@ ADDTEST(rawmoment)
 ADDTEST(var)
 ADDTEST(varn)
 ADDTEST(distribution_PRNG)
+ADDTEST(distribution_uniform)
 
 if(DEFINED CMAKE_MAXIMUM_RANK)
     if(${CMAKE_MAXIMUM_RANK} GREATER 7)
