Provide abstract base class for a string object
- provide full compatibility with the string_type
- provide overloaded interfaces in the base class to define all
  character intrinsic functions for both character scalars
  and functional strings
- add preliminary specs on the public API (not developer API)
  of the abstract base class
- add tests to check a minimal implementation of a string class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,6 +41,7 @@ set(SRC
     stdlib_error.f90
     stdlib_kinds.f90
     stdlib_logger.f90
+    stdlib_string_class.f90
     stdlib_string_type.f90
     stdlib_system.F90
     ${outFiles}
