--- a/src/tests/string/CMakeLists.txt
+++ b/src/tests/string/CMakeLists.txt
@@ -2,4 +2,4 @@ ADDTEST(string_assignment)
 ADDTEST(string_operator)
 ADDTEST(string_intrinsic)
 ADDTEST(string_derivedtype_io)
-
+ADDTEST(string_class)
