--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -19,14 +19,14 @@ SRCFYPP =\
         stdlib_stats_moment_mask.fypp \
         stdlib_stats_moment_scalar.fypp \
         stdlib_stats_var.fypp \
-	stdlib_stats_distribution_PRNG.fypp
+        stdlib_stats_distribution_PRNG.fypp \
+        stdlib_string_type.fypp
 
 SRC = f18estop.f90 \
       stdlib_error.f90 \
       stdlib_kinds.f90 \
       stdlib_logger.f90 \
       stdlib_strings.f90 \
-      stdlib_string_type.f90 \
       $(SRCGEN)
 
 LIB = libstdlib.a
@@ -110,5 +110,5 @@ stdlib_stats_var.o: \
 stdlib_stats_distribution_PRNG.o: \
         stdlib_kinds.o \
 	stdlib_error.o
-stdlib_string_type.o: stdlib_ascii.o
+stdlib_string_type.o: stdlib_ascii.o stdlib_kinds.o
 stdlib_strings.o: stdlib_ascii.o stdlib_string_type.o
