--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -109,3 +109,4 @@ stdlib_stats_var.o: \
 stdlib_stats_distribution_PRNG.o: \
         stdlib_kinds.o \
 	stdlib_error.o
+stdlib_string_type.o: stdlib_ascii.o
