--- a/src/tests/string/Makefile.manual
+++ b/src/tests/string/Makefile.manual
@@ -3,7 +3,7 @@ PROGS_SRC = test_string_assignment.f90 \
             test_string_functions.f90 \
             test_string_intrinsic.f90 \
             test_string_operator.f90 \
-            test_string_trim.f90
+            test_string_strip_chomp.f90
 
 
 include ../Makefile.manual.test.mk
