--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -115,6 +115,5 @@ stdlib_stats_distribution_PRNG.o: \
 stdlib_string_type.o: stdlib_ascii.o \
 	stdlib_kinds.o
 stdlib_strings.o: stdlib_ascii.o \
-	stdlib_string_type.o \
-	stdlib_math.o
+	stdlib_string_type.o
 stdlib_math.o: stdlib_kinds.o
