--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -13,6 +13,7 @@ SRCFYPP =\
         stdlib_stats.fypp \
         stdlib_stats_corr.fypp \
         stdlib_stats_cov.fypp \
+		stdlib_stats_linspace.fypp \
         stdlib_stats_mean.fypp \
         stdlib_stats_moment.fypp \
         stdlib_stats_moment_all.fypp \
@@ -88,6 +89,10 @@ stdlib_stats_corr.o: \
 	stdlib_kinds.o \
 	stdlib_stats.o
 stdlib_stats_cov.o: \
+	stdlib_optval.o \
+	stdlib_kinds.o \
+	stdlib_stats.o
+stdlib_stats_linspace.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
