Fix ci for windows and Intel ifx (#7)
Changes:

* Windows: GCC 13
* Ubuntu-latest: Intel LLVM (instead of Classic)
* Relax test in test_rawmoment due to change from Intel Classic to Intel LLVM

--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -47,8 +47,8 @@ jobs:
         update: false
         install: >-
           git
-          gcc
-          gcc-fortran
+          mingw-w64-x86_64-gcc
+          mingw-w64-x86_64-gcc-fortran
           python
           python-pip
           cmake
@@ -58,7 +58,7 @@ jobs:
       run: pip install fypp
 
     - run: >-
-        cmake
+        PATH=$PATH:/mingw64/bin/ cmake
         -Wdev
         -B build
         -DCMAKE_BUILD_TYPE=Debug
@@ -71,14 +71,14 @@ jobs:
         CXX: g++
 
     - name: CMake build
-      run: cmake --build build --parallel
+      run: PATH=$PATH:/mingw64/bin/ cmake --build build --parallel
 
     - name: catch build fail
-      run: cmake --build build --verbose --parallel 1
+      run: PATH=$PATH:/mingw64/bin/ cmake --build build --verbose --parallel 1
       if: failure()
 
     - name: CTest
-      run: ctest --test-dir build --output-on-failure --parallel -V -LE quadruple_precision
+      run: PATH=$PATH:/mingw64/bin/ ctest --test-dir build --output-on-failure --parallel -V -LE quadruple_precision
 
     - uses: actions/upload-artifact@v1
       if: failure()
@@ -87,4 +87,4 @@ jobs:
         path: build/Testing/Temporary/LastTest.log
 
     - name: Install project
-      run: cmake --install build
+      run: PATH=$PATH:/mingw64/bin/ cmake --install build
